apps/backrest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backrest
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backrest
    spec:
      containers:
        - name: backrest
          image: garethgeorge/backrest:v1.9.1-scratch
          ports:
            - name: http
              containerPort: 9898
          resources:
            requests:
              memory: 50Mi
              cpu: 10m
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: data
            - name: data
              mountPath: /config
              subPath: config
            - name: tmp
              mountPath: /cache
              subPath: cache
            - name: tmp
              mountPath: /tmp
              subPath: tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: backrest-pvc
        - name: tmp
          emptyDir: {}
