apps/backrest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backrest
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: backrest.nasus.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backrest
                port:
                  name: http
  tls:
    - hosts:
        - backrest.nasus.dev
      secretName: backrest-tls
